examples/test/testpolicy6452.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6452
  namespace: namespace125
spec:
  podSelector:
    matchLabels:
      key33: value27
      key35: value26
      key9: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value41
          key18: value42
          key15: value23
      podSelector:
        matchLabels:
          key39: value12
